// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarList renders with collapsed avatar count if > 5 users 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  tooltipOptions={
    Object {
      "position": "top",
    }
  }
  typeMembers="users"
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "3",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "4",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "5",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "6",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <AvatarListWrapper>
    <div
      className="css-e1rf9n-AvatarListWrapper e1axh4r50"
    >
      <Tooltip
        containerDisplayMode="inline-block"
        position="top"
        title="1 other users"
      >
        <Manager>
          <Reference>
            <InnerReference
              setReferenceNode={[Function]}
            >
              <Container
                aria-describedby=""
                containerDisplayMode="inline-block"
                innerRef={[Function]}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  aria-describedby=""
                  className="css-1vf31z4-Container eowlwvy0"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <CollapsedUsers
                    size={28}
                  >
                    <div
                      className="css-17ychq3-CollapsedUsers-Circle e1axh4r52"
                      size={28}
                    >
                      <Plus>
                        <span
                          className="css-sduhlv-Plus e1axh4r53"
                        >
                          +
                        </span>
                      </Plus>
                      1
                    </div>
                  </CollapsedUsers>
                </span>
              </Container>
            </InnerReference>
          </Reference>
        </Manager>
      </Tooltip>
      <StyledAvatar
        hasTooltip={true}
        key="1-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "1",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <Avatar
          className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <UserAvatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
            gravatar={false}
            hasTooltip={true}
            size={28}
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "1",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <BaseAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
              gravatarId="foo@example.com"
              hasTooltip={true}
              letterId="foo@example.com"
              round={true}
              size={28}
              style={Object {}}
              title="Foo Bar"
              tooltip="Foo Bar (foo@example.com)"
              tooltipOptions={
                Object {
                  "position": "top",
                }
              }
              type="letter_avatar"
              uploadId=""
              uploadPath="avatar"
            >
              <Tooltip
                containerDisplayMode="inline-block"
                disabled={false}
                position="top"
                title="Foo Bar (foo@example.com)"
              >
                <Manager>
                  <Reference>
                    <InnerReference
                      setReferenceNode={[Function]}
                    >
                      <Container
                        aria-describedby=""
                        containerDisplayMode="inline-block"
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <span
                          aria-describedby=""
                          className="css-1vf31z4-Container eowlwvy0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <StyledBaseAvatar
                            className="avatar css-ptswrs-StyledAvatar-Circle e1axh4r51"
                            loaded={true}
                            round={true}
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                          >
                            <span
                              className="avatar e1axh4r51 css-p25dkn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-vyy37i-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-vyy37i-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </span>
                          </StyledBaseAvatar>
                        </span>
                      </Container>
                    </InnerReference>
                  </Reference>
                </Manager>
              </Tooltip>
            </BaseAvatar>
          </UserAvatar>
        </Avatar>
      </StyledAvatar>
      <StyledAvatar
        hasTooltip={true}
        key="2-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "2",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <Avatar
          className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <UserAvatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
            gravatar={false}
            hasTooltip={true}
            size={28}
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "2",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <BaseAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
              gravatarId="foo@example.com"
              hasTooltip={true}
              letterId="foo@example.com"
              round={true}
              size={28}
              style={Object {}}
              title="Foo Bar"
              tooltip="Foo Bar (foo@example.com)"
              tooltipOptions={
                Object {
                  "position": "top",
                }
              }
              type="letter_avatar"
              uploadId=""
              uploadPath="avatar"
            >
              <Tooltip
                containerDisplayMode="inline-block"
                disabled={false}
                position="top"
                title="Foo Bar (foo@example.com)"
              >
                <Manager>
                  <Reference>
                    <InnerReference
                      setReferenceNode={[Function]}
                    >
                      <Container
                        aria-describedby=""
                        containerDisplayMode="inline-block"
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <span
                          aria-describedby=""
                          className="css-1vf31z4-Container eowlwvy0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <StyledBaseAvatar
                            className="avatar css-ptswrs-StyledAvatar-Circle e1axh4r51"
                            loaded={true}
                            round={true}
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                          >
                            <span
                              className="avatar e1axh4r51 css-p25dkn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-vyy37i-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-vyy37i-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </span>
                          </StyledBaseAvatar>
                        </span>
                      </Container>
                    </InnerReference>
                  </Reference>
                </Manager>
              </Tooltip>
            </BaseAvatar>
          </UserAvatar>
        </Avatar>
      </StyledAvatar>
      <StyledAvatar
        hasTooltip={true}
        key="3-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "3",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <Avatar
          className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "3",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <UserAvatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
            gravatar={false}
            hasTooltip={true}
            size={28}
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "3",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <BaseAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
              gravatarId="foo@example.com"
              hasTooltip={true}
              letterId="foo@example.com"
              round={true}
              size={28}
              style={Object {}}
              title="Foo Bar"
              tooltip="Foo Bar (foo@example.com)"
              tooltipOptions={
                Object {
                  "position": "top",
                }
              }
              type="letter_avatar"
              uploadId=""
              uploadPath="avatar"
            >
              <Tooltip
                containerDisplayMode="inline-block"
                disabled={false}
                position="top"
                title="Foo Bar (foo@example.com)"
              >
                <Manager>
                  <Reference>
                    <InnerReference
                      setReferenceNode={[Function]}
                    >
                      <Container
                        aria-describedby=""
                        containerDisplayMode="inline-block"
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <span
                          aria-describedby=""
                          className="css-1vf31z4-Container eowlwvy0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <StyledBaseAvatar
                            className="avatar css-ptswrs-StyledAvatar-Circle e1axh4r51"
                            loaded={true}
                            round={true}
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                          >
                            <span
                              className="avatar e1axh4r51 css-p25dkn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-vyy37i-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-vyy37i-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </span>
                          </StyledBaseAvatar>
                        </span>
                      </Container>
                    </InnerReference>
                  </Reference>
                </Manager>
              </Tooltip>
            </BaseAvatar>
          </UserAvatar>
        </Avatar>
      </StyledAvatar>
      <StyledAvatar
        hasTooltip={true}
        key="4-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "4",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <Avatar
          className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "4",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <UserAvatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
            gravatar={false}
            hasTooltip={true}
            size={28}
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "4",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <BaseAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
              gravatarId="foo@example.com"
              hasTooltip={true}
              letterId="foo@example.com"
              round={true}
              size={28}
              style={Object {}}
              title="Foo Bar"
              tooltip="Foo Bar (foo@example.com)"
              tooltipOptions={
                Object {
                  "position": "top",
                }
              }
              type="letter_avatar"
              uploadId=""
              uploadPath="avatar"
            >
              <Tooltip
                containerDisplayMode="inline-block"
                disabled={false}
                position="top"
                title="Foo Bar (foo@example.com)"
              >
                <Manager>
                  <Reference>
                    <InnerReference
                      setReferenceNode={[Function]}
                    >
                      <Container
                        aria-describedby=""
                        containerDisplayMode="inline-block"
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <span
                          aria-describedby=""
                          className="css-1vf31z4-Container eowlwvy0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <StyledBaseAvatar
                            className="avatar css-ptswrs-StyledAvatar-Circle e1axh4r51"
                            loaded={true}
                            round={true}
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                          >
                            <span
                              className="avatar e1axh4r51 css-p25dkn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-vyy37i-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-vyy37i-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </span>
                          </StyledBaseAvatar>
                        </span>
                      </Container>
                    </InnerReference>
                  </Reference>
                </Manager>
              </Tooltip>
            </BaseAvatar>
          </UserAvatar>
        </Avatar>
      </StyledAvatar>
      <StyledAvatar
        hasTooltip={true}
        key="5-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "5",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <Avatar
          className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "5",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <UserAvatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
            gravatar={false}
            hasTooltip={true}
            size={28}
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "5",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <BaseAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
              gravatarId="foo@example.com"
              hasTooltip={true}
              letterId="foo@example.com"
              round={true}
              size={28}
              style={Object {}}
              title="Foo Bar"
              tooltip="Foo Bar (foo@example.com)"
              tooltipOptions={
                Object {
                  "position": "top",
                }
              }
              type="letter_avatar"
              uploadId=""
              uploadPath="avatar"
            >
              <Tooltip
                containerDisplayMode="inline-block"
                disabled={false}
                position="top"
                title="Foo Bar (foo@example.com)"
              >
                <Manager>
                  <Reference>
                    <InnerReference
                      setReferenceNode={[Function]}
                    >
                      <Container
                        aria-describedby=""
                        containerDisplayMode="inline-block"
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <span
                          aria-describedby=""
                          className="css-1vf31z4-Container eowlwvy0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <StyledBaseAvatar
                            className="avatar css-ptswrs-StyledAvatar-Circle e1axh4r51"
                            loaded={true}
                            round={true}
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                          >
                            <span
                              className="avatar e1axh4r51 css-p25dkn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-vyy37i-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-vyy37i-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </span>
                          </StyledBaseAvatar>
                        </span>
                      </Container>
                    </InnerReference>
                  </Reference>
                </Manager>
              </Tooltip>
            </BaseAvatar>
          </UserAvatar>
        </Avatar>
      </StyledAvatar>
    </div>
  </AvatarListWrapper>
</AvatarList>
`;

exports[`AvatarList renders with user avatars 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  tooltipOptions={
    Object {
      "position": "top",
    }
  }
  typeMembers="users"
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <AvatarListWrapper>
    <div
      className="css-e1rf9n-AvatarListWrapper e1axh4r50"
    >
      <StyledAvatar
        hasTooltip={true}
        key="1-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "1",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <Avatar
          className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <UserAvatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
            gravatar={false}
            hasTooltip={true}
            size={28}
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "1",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <BaseAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
              gravatarId="foo@example.com"
              hasTooltip={true}
              letterId="foo@example.com"
              round={true}
              size={28}
              style={Object {}}
              title="Foo Bar"
              tooltip="Foo Bar (foo@example.com)"
              tooltipOptions={
                Object {
                  "position": "top",
                }
              }
              type="letter_avatar"
              uploadId=""
              uploadPath="avatar"
            >
              <Tooltip
                containerDisplayMode="inline-block"
                disabled={false}
                position="top"
                title="Foo Bar (foo@example.com)"
              >
                <Manager>
                  <Reference>
                    <InnerReference
                      setReferenceNode={[Function]}
                    >
                      <Container
                        aria-describedby=""
                        containerDisplayMode="inline-block"
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <span
                          aria-describedby=""
                          className="css-1vf31z4-Container eowlwvy0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <StyledBaseAvatar
                            className="avatar css-ptswrs-StyledAvatar-Circle e1axh4r51"
                            loaded={true}
                            round={true}
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                          >
                            <span
                              className="avatar e1axh4r51 css-p25dkn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-vyy37i-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-vyy37i-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </span>
                          </StyledBaseAvatar>
                        </span>
                      </Container>
                    </InnerReference>
                  </Reference>
                </Manager>
              </Tooltip>
            </BaseAvatar>
          </UserAvatar>
        </Avatar>
      </StyledAvatar>
      <StyledAvatar
        hasTooltip={true}
        key="2-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "2",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <Avatar
          className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <UserAvatar
            className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
            gravatar={false}
            hasTooltip={true}
            size={28}
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "2",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <BaseAvatar
              className="css-ptswrs-StyledAvatar-Circle e1axh4r51"
              gravatarId="foo@example.com"
              hasTooltip={true}
              letterId="foo@example.com"
              round={true}
              size={28}
              style={Object {}}
              title="Foo Bar"
              tooltip="Foo Bar (foo@example.com)"
              tooltipOptions={
                Object {
                  "position": "top",
                }
              }
              type="letter_avatar"
              uploadId=""
              uploadPath="avatar"
            >
              <Tooltip
                containerDisplayMode="inline-block"
                disabled={false}
                position="top"
                title="Foo Bar (foo@example.com)"
              >
                <Manager>
                  <Reference>
                    <InnerReference
                      setReferenceNode={[Function]}
                    >
                      <Container
                        aria-describedby=""
                        containerDisplayMode="inline-block"
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <span
                          aria-describedby=""
                          className="css-1vf31z4-Container eowlwvy0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <StyledBaseAvatar
                            className="avatar css-ptswrs-StyledAvatar-Circle e1axh4r51"
                            loaded={true}
                            round={true}
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                          >
                            <span
                              className="avatar e1axh4r51 css-p25dkn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-vyy37i-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-vyy37i-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </span>
                          </StyledBaseAvatar>
                        </span>
                      </Container>
                    </InnerReference>
                  </Reference>
                </Manager>
              </Tooltip>
            </BaseAvatar>
          </UserAvatar>
        </Avatar>
      </StyledAvatar>
    </div>
  </AvatarListWrapper>
</AvatarList>
`;
